<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clipboard Translate</string>
    <string name="app_name_short">ClipTrans</string>

    <string name="title_setting">App Setting</string>
    <string name="title_setting_dic">Dictionary Setting</string>
    <string name="title_about">About</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="install_google_translate">Install Google Translate</string>
    <string name="translate">Translate</string>

    <string name="use_google_translate">Cooperation with Google translation app</string>
    <string name="use_google_translate_description">Start the Google translation when a word is not found in the local dictionary of apps.</string>
    <string name="use">Start</string>

    <string name="display_position">Display position</string>
    <string name="display_position_description">When word is found in the local dictionary, app displays the translation over the original screen.</string>
    <string name="top">Top</string>
    <string name="below">Below</string>

    <string name="dictionary_fuzzy_search">Dictionary fuzzy search</string>
    <string name="dictionary_fuzzy_search_description">Search singular and plural in English.</string>
    <string name="search_fuzzy">Search fuzzy</string>

    <string name="dictionary_filter_word">Conditions to prevent malfunction</string>
    <string name="dictionary_filter_word_description">\"word\" is a sequence of characters that do not contain such as a space.\n\"string\" is a sequence of one or more multiple words separated by such as a space.</string>
    <string name="dictionary_filter_word_nihongo">String that contains Hiragana, Katakana, Kanji</string>
    <string name="dictionary_filter_word_num_sp">Word that contains the number, symbol</string>
    <string name="dictionary_filter_word_alpha_low2up">Word that change from alphabet lower case to upper case at intermediate</string>

    <string name="display_allow_recent_thumbnail">Display a thumbnail in the Android Recent screen</string>
    <string name="display_allow_recent_thumbnail_description">To prevent replace the thumbnail of dictionary screen of this app and another app.\n(You can not take a screenshot in the dictionary screen)\n(Behavior might be different for each terminal)</string>
    <string name="display_thumbnail">Display a thumbnail</string>

    <string name="dictionary_import">Dictionary import</string>
    <string name="__words_imported">%1$d words has been imported</string>
    <string name="download_dic">Download</string>
    <string name="import_dic">Import</string>
    <string name="delete_dic">Delete</string>
    <string name="explanation_to_user_how_to_download">Browser will open soon.\nIn the browser, please download the file by tapping the \"%1$s\".\nDownload is complete, please return to this screen.\n(it does not matter even if you transfer a file that you downloaded in the PC to Android.)</string>
    <string name="confirm_search_file_browser_in_google_play">File browser was not found. \nDo you looking for in Google Play?</string>
    <string name="explanation_to_user_how_to_import">File selection screen will open soon.\nPlease select a file \"%1$s\" that is in the Download directory.\nIf you are unable to select a file, please install the app found by searching for "filer" in GooglePlay.</string>
    <string name="confirm_delete_dictionary_data">I will remove the imported dictionary. \nAre you sure?</string>
    <string name="importing_dictionary">Importing dictionary</string>
    <string name="failed_to_import_dictionary">Failed to import the dictionary</string>
    <string name="notify_finished_import_dictionary">Import of dictionary is now complete. \nThe downloaded file can safely be deleted.</string>

    <string name="notification_message">Please copy the string to the clipboard, I will translate</string>
    <string name="not_found_google_translation">Google translation not found</string>
    <string name="started_google_translation">Started the Google translation by copied string to the clipboard</string>

</resources>
