<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context=".MainActivity"
    android:id="@+id/layout"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="dictionary description"
        android:id="@+id/textView_description"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/__words_imported"
            android:id="@+id/textView_word_count"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="icon"
            android:textSize="12sp"
            android:id="@+id/textView_icon"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black"
            tools:ignore="HardcodedText,RtlHardcoded"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        tools:ignore="RtlHardcoded">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_dic"
            android:id="@+id/button_download"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_dic"
            android:id="@+id/button_import"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_dic"
            android:id="@+id/button_delete"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
